add minimal css

--- a/views/actor_info.erb
+++ b/views/actor_info.erb
@@ -1,3 +1,4 @@
+
 <h1><%= @actor.name() %></h1>
 
 <h3>Select all movies starring this actor:</h3>
@@ -14,7 +15,7 @@
   </div>
   <% end %>
 
-  <button type="submit">Add movies</button>
+  <button class="btn btn-primary" type="submit">Add movies</button>
 </form>
 <% end %>
 
