--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,9 +1,13 @@
 <!DOCTYPE>
 <html>
   <head>
-    <title>Movies</title>
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <link rel="stylesheet" href="styles.css" type="text/css">
+      <title>Movies</title>
   </head>
   <body>
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
