--- a/views/actor_edit.erb
+++ b/views/actor_edit.erb
@@ -1,20 +1,20 @@
+<div class="container">
+
 <h1> Edit Actor</h1>
-
-
 <form action="/actors/<%= @actor.id %>/edit" method="post">
   <input name="_method" type="hidden" value="patch">
 
   <label for="name">Enter New name:</label>
   <input name="name" id="name" type="text">
 
-  <button type="submit">Update Name</button>
+  <button class="btn btn-primary" type="submit">Update Name</button>
 </form>
 
 
 <form action="/actors/<%= @actor.id %>/edit" method="post">
   <input name="_method" type="hidden" value="delete" />
 
-  <button type="submit">Delete it!</button>
+  <button class="btn btn-warning" type="submit">Delete it!</button>
 
 </form>
 
@@ -24,3 +24,4 @@
 </br>
 
 <a href="/">Return to Main Page</a>
+</div>
